--- a/src/main/resources/templates/design/map/plan_list.html
+++ b/src/main/resources/templates/design/map/plan_list.html
@@ -42,7 +42,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item"
-                                           th:href="@{|/travel/design/modification/basic/${plan.id}|}">수정</a></li>
+                                           th:href="@{|/travel/design/modification/${plan.id}?order=1|}">수정</a></li>
                                     <li><a class="dropdown-item"
                                            th:href="@{|/travel/design/plan/detail/${plan.id}?order=1|}">상세</a></li>
                                     <li><a class="dropdown-item"
