캘린더 상세 페이지에 삽입 완료, html구조 수정 필요

--- a/src/main/resources/templates/design/map/plan_detail.html
+++ b/src/main/resources/templates/design/map/plan_detail.html
@@ -1,13 +1,15 @@
 <html layout:decorate="~{layout/layout}">
+<head>
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
 <link rel="stylesheet" th:href="@{/calendar-19/fonts/icomoon/style.css}">
 <link th:href='@{/calendar-19/fullcalendar/packages/core/main.css}' rel='stylesheet' />
 <link th:href='@{/calendar-19/fullcalendar/packages/daygrid/main.css}' rel='stylesheet' />
 <!-- Bootstrap CSS -->
-<link rel="stylesheet" th:href="@{/calendar-19/css/bootstrap.min.css}">
+<!--<link rel="stylesheet" th:href="@{/calendar-19/css/bootstrap.min.css}">-->
 <!-- Style -->
 <link rel="stylesheet" th:href="@{/calendar-19/css/style.css}">
+</head>
 <div layout:fragment="content" class="mt-3 container justify-content-around"
      style="width: 95%; min-height: 100%; position:relative;">
     <input type="hidden" name="course" th:value="${course}">
@@ -121,9 +123,9 @@
                 <div id='calendar'></div>
             </div>
 
-            <script th:src="@{/calendar-19/js/jquery-3.3.1.min.js}"></script>
+<!--            <script th:src="@{/calendar-19/js/jquery-3.3.1.min.js}"></script>-->
             <script th:src="@{/calendar-19/js/popper.min.js}"></script>
-            <script th:src="@{calendar-19/js/bootstrap.min.js}"></script>
+<!--            <script th:src="@{calendar-19/js/bootstrap.min.js}"></script>-->
 
             <script th:src='@{/calendar-19/fullcalendar/packages/core/main.js}'></script>
             <script th:src='@{/calendar-19/fullcalendar/packages/interaction/main.js}'></script>
