--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -43,6 +43,12 @@
                             <span>마이페이지</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link " th:href="@{/review/myList}">
+                            <i class="material-icons">person</i>
+                            <span>내 리뷰</span>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </aside>
