myReviewList에서 여행지 표시

--- a/src/main/resources/templates/layout/fragments/sidebar.html
+++ b/src/main/resources/templates/layout/fragments/sidebar.html
@@ -46,7 +46,7 @@
                     <li class="nav-item">
                         <a class="nav-link " th:href="@{/review/myList}">
                             <i class="material-icons">person</i>
-                            <span>내 리뷰</span>
+                            <span>내 여행 리뷰</span>
                         </a>
                     </li>
                 </ul>
