--- a/src/main/resources/templates/user/my_page_form.html
+++ b/src/main/resources/templates/user/my_page_form.html
@@ -14,7 +14,9 @@
             <li class="list-group-item p-3">
                 <div class="row">
                     <div class="col">
-                        <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post">
+
+                        <!-- 소셜 로그인 X -->
+                        <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post"  th:if="${#authentication.principal.method} == 'd'">
 
                             <div th:replace="user/form_errors :: formErrorsFragment"></div>
 
@@ -40,6 +42,38 @@
                                     <label class="form-label">비밀번호 확인</label>
                                     <input type="password" th:field="*{password_check}" class="form-control"
                                            placeholder="Password">
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-primary">정보 수정</button>
+                        </form>
+
+                        <!-- 소셜 로그인 O -->
+                        <form th:action="@{/user/my_page}" th:object="${userEditForm}" method="post"  th:if="${#authentication.principal.method} != 'd'">
+
+                            <div th:replace="user/form_errors :: formErrorsFragment"></div>
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">닉네임</label>
+                                    <input type="text" th:field="*{nickname}" class="form-control"
+                                           placeholder="Nickname">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">이메일</label>
+                                    <input type="email" th:field="*{email}" class="form-control"
+                                           th:placeholder="${#authentication.principal.email}" disabled>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">비밀번호</label>
+                                    <input type="password" th:field="*{password}" class="form-control"
+                                           placeholder="Password" disabled>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label class="form-label">비밀번호 확인</label>
+                                    <input type="password" th:field="*{password_check}" class="form-control"
+                                           placeholder="Password" disabled>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-primary">정보 수정</button>
